--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "devDependencies": {
     "@devacademy/eslint-config": "^1.10.1",
     "@types/node": "^18.11.9",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.29.1",
@@ -36,10 +36,10 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
-    "react": "^18.0.2",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router": "^7.6.0",
-    "typescript": "^5.3.3",
+    "typescript": "^5.8.3",
     "vite": "^5.0.0",
     "vitest": "^1.2.0"
   },
@@ -47,5 +47,8 @@
     "semi": false,
     "singleQuote": true
   },
-  "browserslist": "> 2%, not dead"
+  "browserslist": "> 2%, not dead",
+  "dependencies": {
+    "framer-motion": "^12.18.1"
+  }
 }
