--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@devacademy/eslint-config": "^1.10.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^18.11.9",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
