--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.29.1",
@@ -37,6 +38,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "jsdom": "^26.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "react": "^18.3.1",
@@ -52,6 +54,7 @@
   },
   "browserslist": "> 2%, not dead",
   "dependencies": {
-    "framer-motion": "^12.18.1"
+    "framer-motion": "^12.18.1",
+    "react-router-dom": "^7.6.2"
   }
 }
