--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "license": "ISC",
   "devDependencies": {
     "@devacademy/eslint-config": "^1.10.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^18.11.9",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
@@ -34,6 +36,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "jsdom": "^26.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "react": "^18.3.1",
